--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,8 @@
     <link rel="stylesheet" href="build/main.css"/>
 </head>
 <body>
-<!--<div class="b-container">
+<!--960-->
+<div class="b-container">
     <div class="b-row">
         <div class="columns col16 one">
             Columns: 16<br/>
@@ -92,7 +93,8 @@
         <div class="columns col3 one offset10">3</div>
         <div class="columns col3 two">3</div>
     </div>
-</div>-->
+</div>
+<!--520-->
 <!--<div class="b-container">
     <div class="b-row">
         <div class="columns col13 one">
@@ -120,6 +122,7 @@
         <div class="columns col9 two">9</div>
     </div>
 </div>-->
+<!--1080-->
 <!--<div class="b-container">
     <div class="b-row">
         <div class="columns col18 one">
